fix: update flicker animation to alternate and simplify keyframes in global.css

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,22 +8,16 @@
   --spacing-7-block: calc(var(--block-size) * 7);
   --spacing-9-block: calc(var(--block-size) * 9);
 
-  --animate-flicker: flicker 1s cubic-bezier(.4, 0, .6, 1) infinite;
+  --animate-flicker: flicker 1s cubic-bezier(.4, 0, .6, 1) infinite alternate;
   @keyframes flicker {
-    0%, 100%{
+    0%{
       background-color: var(--color-pink-200);
     }
-    25%, 75% {
+    50% {
         background-color: var(--color-pink-300);
     }
-    50% {
+    100% {
       background-color: var(--color-pink-400);
-    }
-    60% {
-      background-color: var(--color-pink-400);
-    }
-    70% {
-      background-color: var(--color-pink-300);
     }
   }
 }
